# comfyui-web-viewer

./: .bumpversion.cfg  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  update_version.py
.github/: FUNDING.yml
.github/workflows/: publish.yml
assets/touchosc/: comfyui_osc_control.tosc
docs/: audio_nodes.md  gamepad_nodes.md  image_nodes.md  key_control_nodes.md  logic_nodes.md  midi_control_nodes.md  midi_nodes.md  osc_control_nodes.md  text_nodes.md  tutorial_001_live_portrait_with_gamepad.md  tutorial_002_fast_image_to_video_by_ltx_video_and_ollama.md  tutorial_003_fast_image_to_video_by_ltx_video_and_mmaudio_and_ollama.md  tutorial_004_real_time_voice_clone_by_f5_tts.md  tutorial_005_storytelling_with_text_srt_player.md  tutorial_006_srt_to_audio_picture_book.md  tutorial_007_live_portrait_with_native_gamepad.md  web_viewer_nodes.md  web_viewer_nodes_extra_params.md  websocket_nodes.md  websocket_nodes_extra_params.md  websocket_viewer_nodes.md  websocket_viewer_nodes_extra_params.md  workflow_export_nodes.md
example_workflows/: example_audio_nodes_001_audio_recorder.json  example_audio_nodes_002_audio_emotion_visualizer.json  example_audio_nodes_003_microphone.json  example_gamepad_nodes_001_basic.json  example_gamepad_nodes_002_live_portrait.json  example_others_001_text_to_image_8k.json  example_others_002_autorun_instant_queue.json  example_others_004_srt_to_audio_picture_book.json  example_others_005_srt_to_audio_picture_book_sdxl.json  example_text_nodes_001_text_srt_player.json  example_web_viewer_002_image_flipbook_web_viewer.json  example_web_viewer_003_video_web_viewer.json  example_web_viewer_004_video_web_viewer_video_with_sfx.json  example_web_viewer_005_audio_web_viewer_f5_tts.json  example_websocket_nodes_001_basic.json  example_websocket_nodes_002_prompt_sender.json
https/: cert.pem  key.pem
nodes/: audio_genres_node.py  audio_music2emo_node.py  audio_nodes.py  gamepad_control_nodes.py  gamepad_nodes.py  image_nodes.py  image_saver_node.py  key_control_nodes.py  logic_nodes.py  midi_control_nodes.py  midi_nodes.py  midi_websocket_protocol.py  node_utils.py  osc_control_nodes.py  text_nodes.py  web_viewer_node.py  web_viewer_nodes.py  websocket_nodes.py  workflow_export_nodes.py
nodes/tests/: README.md  midi_control_nodes_test.py  midi_websocket_protocol_test.py  osc_server_test.py  websocket_nodes_test.py  websocket_realtime_perf_test.py  websocket_server_perf_test.py  websocket_server_test.py
nodes/utils/: websocket_server.py
utils/: music_genres_classifier.py
web/: index.html
web/comfyui/: audio_mic_loader_node.js  audio_nodes.js  gamepad_nodes.js  image_nodes.js  key_control_nodes.js  logic_nodes.js  midi_nodes.js  node_utils.js  text_nodes.js  web_viewer_node.js  web_viewer_nodes.js  websocket_nodes.js  websocket_viewer_nodes.js
web/css/: style.css
workflows/: example_gamepad_nodes_001_basic.json  example_image_nodes_001_preview_in_background.json  example_key_control_001_basic.json  example_osc_control_001_basic.json  example_osc_control_002_live_portrait_with_gamepad.json  example_osc_control_003_ic-light.json  example_osc_control_004_ic-light_and_live_portrait.json  example_others_002_autorun_instant_queue.json  example_others_003_text_to_image_5k_avp_ultra_wide.json  example_others_004_srt_to_audio_picture_book.json  example_others_005_srt_to_audio_picture_book_sdxl.json  example_web_viewer_001_image_web_viewer.json  example_web_viewer_002_image_flipbook_web_viewer.json  example_web_viewer_003_video_web_viewer.json  example_web_viewer_004_video_web_viewer_video_with_sfx.json  example_web_viewer_005_audio_web_viewer_f5_tts.json
