[project]
name = "comfyui-web-viewer"
description = "The ComfyUI Web Viewer by vrch.ai is a custom node collection offering a real-time AI-generated interactive art framework. This utility integrates realtime streaming into ComfyUI workflows, supporting keyboard control nodes, OSC control nodes, sound input nodes, and more. Accessible from any device with a web browser, it enables real time interaction with AI-generated content, making it ideal for interactive visual projects and enhancing ComfyUI workflows with efficient content management and display."
version = "1.1.10"
license = {file = "LICENSE"}
dependencies = ["aiohttp","ffmpeg-python","matplotlib","pydub","python-osc","qrcode[pil]","scikit-learn","srt","websockets"]

[project.urls]
Repository = "https://github.com/VrchStudio/comfyui-web-viewer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "vrchdev"
DisplayName = "ComfyUI Web Viewer"
Icon = "https://vrch.ai/images/vrch_Logo_vertical_black.png"